--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -166,3 +166,25 @@ main section{
     text-align: center;
     margin-top: 20px;
 }
+
+/*Footer styles*/
+
+footer{
+    display: flex;
+    gap: 100px;
+    padding: 130px 230px;
+}
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 64px;
+    display: block;
+    width: 100%;
+    border-radius: 5px;
+    background-color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+
+}
