--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -188,3 +188,41 @@ footer input[type="text"], footer input[type="email"], footer textarea{
     margin-bottom: 24px;
 
 }
+
+/*responsive media query*/
+
+.hide{
+    display: none;
+}
+
+@media screen and (max-width: 576px){
+    .skill-container, .resume-container, footer, .about-items, .banner, nav, ul{
+        flex-direction: column;
+    }
+    .footer-column{
+        width: 100%;
+    }
+    .banner{
+        margin: 20px;
+    }
+    footer, .about{
+        padding:20px;
+    }
+    footer input[type="text"], footer input[type="email"], footer textarea{
+        width: calc(100% - 40px);
+    }
+    .header{
+        background-image: none;
+    }
+    .banner-profile-pic{
+        width: 100%;
+    }
+}
+
+/*Tablet specific media query*/
+
+@media screen and (min-width: 576px) and (max-width: 990px){
+    .banner{
+        flex-direction: column;
+    }
+}
